# tpedia

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: multi-platform.yml
docs/: build_from_source.md  contributions.md  index.md  installation.md  legal.md  usage.md
docs/LICENSES/: Boost.txt  mit-cpphttplib.txt  mit-ftxui.txt
incl/: application.hpp  macros.hpp
incl/api/: wikipedia_client.hpp
incl/request_cleaner/: req_cln.hpp
incl/ui/: about.hpp  header.hpp  homepage.hpp  scrollbar.hpp  search_results.hpp  wiki_text.hpp
src/: application.cpp  macros.hpp  main.cpp
src/api/: wikipedia_client.cpp
src/request_cleaner/: req_cln.cpp  req_cln.hpp
src/ui/: about.cpp  header.cpp  homepage.cpp  scrollbar.cpp  search_results.cpp  wiki_text.cpp
